Update RBAC default role handling and documentation